# wellsign

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample_investors.xlsx  wellsign.spec
docs/: architecture.md  data-model.md  licenses.md  paloma-packet.md  regd-compliance.md  roadmap.md  security.md
scripts/: make_sample_investors.py  mint_license.py
src/wellsign/: __init__.py  app_paths.py  main.py
src/wellsign/db/: __init__.py  costs.py  investor_documents.py  investors.py  migrate.py  payments.py  phases.py  projects.py  reconcile.py  schema.sql  seed.py  send_events.py  stages.py  templates.py  workflows.py
src/wellsign/email_/: __init__.py  sender.py
src/wellsign/help/: __init__.py  content.py
src/wellsign/license_/: __init__.py  issue.py  verify.py
src/wellsign/models/: __init__.py
src/wellsign/pdf_/: __init__.py  fields.py  fill.py  merge_vars.py  stage_generator.py
src/wellsign/resources/: license_public_key.pem  style.qss
src/wellsign/ui/: __init__.py  main_window.py  navigator.py
src/wellsign/ui/dialogs/: __init__.py  about_dialog.py  cost_line_dialog.py  edit_project_dialog.py  field_mapping_dialog.py  help_dialog.py  import_investors_dialog.py  investor_detail_dialog.py  investor_dialog.py  new_doc_template_dialog.py  new_email_template_dialog.py  new_project_dialog.py  payment_dialog.py  template_picker_dialog.py
src/wellsign/util/: __init__.py  audit.py  calc.py  crypto.py  storage.py
tests/: test_audit.py  test_calc.py  test_crypto.py  test_pdf_fill.py  test_smoke_boot.py
(+19 files in other folders)
