[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wellsign"
version = "0.0.1"
description = "Local desktop app for automating oil & gas investor packet workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Jeremy Keeler" }]
dependencies = [
    "PySide6>=6.6",
    "cryptography>=42",
    "keyring>=24",
    "openpyxl>=3.1",
    "pypdf>=4.0",
    "pdfrw>=0.4",
    "reportlab>=4.0",
    "pywin32>=306; sys_platform == 'win32'",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyinstaller>=6.6",
]

[project.scripts]
wellsign = "wellsign.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wellsign = ["resources/*.qss", "resources/*.png", "resources/*.svg", "db/schema.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
